Use SSL version of various URLs. [0]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -69,7 +69,7 @@ mcidasv.about.text = /edu/wisc/ssec/mcidasv/resources/about.html
 # at version.properties using the command-line...
 mcidasv.version.file.proplabel = Version file
 mcidasv.version.file = /edu/wisc/ssec/mcidasv/resources/build.properties
-mcidasv.homepage = http://www.ssec.wisc.edu/mcidas
+mcidasv.homepage = https://www.ssec.wisc.edu/mcidas
 
 mcidasv.chooser.adde.image.servers.system = true
 
@@ -114,7 +114,7 @@ idv.support.package=idv
 idv.support.message.propdesc=This is the message we show in the support request form
 idv.support.message.proplabel=Support form message
 idv.support.message=This form allows you to post a support request to the Unidata Program Center (UPC).<br>\
-Alternatively, use the form on the Support page at http://www.unidata.ucar.edu.
+Alternatively, use the form on the Support page at https://www.unidata.ucar.edu.
 
 # BMF 2007-07-05
 #idv.ui.dashboard.propdesc=The path to the skin for creating the dashboard GUI
@@ -190,7 +190,7 @@ idv.data.adde.servers = adde.ucar.edu;stratus.al.noaa.gov;weather3.admin.niu.edu
 ##Semicolon separated list of adde servers
 idv.data.tds.radar.servers.proplabel=Catalogs
 idv.data.tds.radar.servers.propdelimiter=;
-idv.data.tds.radar.servers=http://thredds.ucar.edu/thredds/radarServer/catalog.xml
+idv.data.tds.radar.servers=https://thredds.ucar.edu/thredds/radarServer/catalog.xml
 idv.data.tds.radar.servers.merge=true
 idv.data.tds.radar.servers.merge.proplabel=Merge Catalogs
 idv.data.tds.radar.servers.delete.proplabel=Catalogs To Remove
@@ -235,7 +235,7 @@ idv.jnlp.template = /ucar/unidata/idv/resources/template.jnlp
 
 ##This is where we find the webstart code release 
 idv.jnlp.codebase.proplabel=JNLP code base
-idv.jnlp.codebase = http://www.unidata.ucar.edu/software/idv/webstart
+idv.jnlp.codebase = https://www.unidata.ucar.edu/software/idv/webstart
 
 
 ##Title used in the jnlp file
@@ -316,7 +316,7 @@ idv.ui.lookandfeel = javax.swing.plaf.metal.MetalLookAndFeel
 ##Semicolon delimited list of urls pointing to thredds catalogs
 idv.data.catalog.list.proplabel=Catalogs
 idv.data.catalog.list.propdelimiter=;
-idv.data.catalog.list=http://www.ssec.wisc.edu/mcidas/software/v/catalog.xml
+idv.data.catalog.list=https://www.ssec.wisc.edu/mcidas/software/v/catalog.xml
 idv.data.catalog.list.merge=true
 idv.data.catalog.list.merge.proplabel=Merge Catalogs
 idv.data.catalog.list.delete.proplabel=Catalogs To Remove
@@ -325,7 +325,7 @@ idv.data.catalog.list.delete= http://motherlode.ucar.edu/dods/catalog.xml;http:/
 
 
 ##Semicolon delimited list of urls pointing to grid catalogs
-idv.data.grid.list=http://www.ssec.wisc.edu/mcidas/software/v/threddsRTModels.xml;http://weather.rsmas.miami.edu/thredds/catalog.xml
+idv.data.grid.list=https://www.ssec.wisc.edu/mcidas/software/v/threddsRTModels.xml;https://weather.rsmas.miami.edu/thredds/catalog.xml
 ## Semicolon delimited list of URLs that have been removed from the "idv.data.grid.list" property
 idv.data.grid.list.delete=http://thredds.cise-nsf.gov:8080/thredds/idv/models.xml;http://motherlode.ucar.edu:8080/thredds/idv/models.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels_1.xml;http://atm.ucar.edu/thredds/idd/forecastModels.xml;http://atm.ucar.edu/thredds/idd/forecastProdsAndAna.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels.xml;http://www.ssec.wisc.edu/mcidas/software/v/threddsRtModels.xml
 
