--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -190,12 +190,12 @@ idv.data.adde.servers = adde.ucar.edu;stratus.al.noaa.gov;weather3.admin.niu.edu
 ##Semicolon separated list of adde servers
 idv.data.tds.radar.servers.proplabel=Catalogs
 idv.data.tds.radar.servers.propdelimiter=;
-idv.data.tds.radar.servers=https://thredds.ucar.edu/thredds/radarServer/catalog.xml
+idv.data.tds.radar.servers=http://thredds.ucar.edu/thredds/radarServer/catalog.xml
 idv.data.tds.radar.servers.merge=true
 idv.data.tds.radar.servers.merge.proplabel=Merge Catalogs
 idv.data.tds.radar.servers.delete.proplabel=Catalogs To Remove
 idv.data.tds.radar.servers.delete.propdelimiter=;
-idv.data.tds.radar.servers.delete=http://motherlode.ucar.edu:8080/thredds/radarServer/nexrad/level2/catalog.xml;http://motherlode.ucar.edu:8080/thredds/radarServer/catalog.xml
+idv.data.tds.radar.servers.delete=https://thredds.ucar.edu/thredds/radarServer/catalog.xml;http://motherlode.ucar.edu:8080/thredds/radarServer/nexrad/level2/catalog.xml;http://motherlode.ucar.edu:8080/thredds/radarServer/catalog.xml
 
 
 ## if there is an existing preference list, don't add these in
