Sort field selector entries [1109]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -59,6 +59,10 @@ mac.idv.map.polygonoffsetfactor=1
 ## </unidata's "polygon offset" props>
 ########################################################################
 
+##Do we sort the data choices?
+idv.ui.sortchoices.proplabel = Sort the choices by name
+idv.ui.sortchoices = true
+
 
 mcidasv.about.text.proplabel = About dialog file
 mcidasv.about.text = /edu/wisc/ssec/mcidasv/resources/about.html
