--- a/build.xml
+++ b/build.xml
@@ -202,8 +202,8 @@
     <property name="juniversalchardet.version" value="2.3.0" />
     <property name="jsattrack.version" value="4.1.11" />
     <property name="commons-httpclient.version" value="3.1" />
-    <property name="idv.version" value="5.5u1-SNAPSHOT" />
-    <property name="ncidv.version" value="4.6.12-SNAPSHOT" />
+    <property name="idv.version" value="5.6u1" />
+    <property name="ncidv.version" value="4.6.13-SNAPSHOT" />
     <property name="visad.version" value="2.0-SNAPSHOT" />
 
     <!-- note that the J3D JARs available from http://jogamp.org/deployment/java3d/
