Add ability to specify default ADDE server [2831]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -77,6 +77,11 @@ mcidasv.homepage = https://www.ssec.wisc.edu/mcidas
 
 mcidasv.chooser.adde.image.servers.system = true
 
+# default adde image chooser server selection. both ".server" and ".group" are
+# required.
+mcidasv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
+mcidasv.defaultselection.chooser.imageparameter.group=RTIMAGES
+
 idv.title.proplabel = "McIDAS-V"
 idv.title.propdesc = Title to use for windows, etc.
 idv.title = McIDAS-V
@@ -164,6 +169,7 @@ idv.ui.splash.eastermsg = Your prize is that you owe us a beer
 
 idv.monitorport.proplabel=Port to run the IDV monitor on
 idv.monitorport=8788
+#idv.monitorport=none
 
 idv.locations.default.proplabel = Default locations file
 idv.locations.default = nexrad
