Add some comments on how to use previous commit.
[2831]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -77,8 +77,15 @@ mcidasv.homepage = https://www.ssec.wisc.edu/mcidas
 
 mcidasv.chooser.adde.image.servers.system = true
 
-# default adde image chooser server selection. both ".server" and ".group" are
-# required.
+# Default *ADDE chooser* server selection. Both ".server" and ".group" are
+# required. The format of the properties is like so:
+#   
+#   mcidasv.defaultselection.<CHOOSER ID>.server=...
+#   mcidasv.defaultselection.<CHOOSER ID>.group=...
+#   
+# <CHOOSER IDs> are taken from the "id" attribute of "chooser" elements in
+# edu/wisc/ssec/mcidasv/resources/choosers.xml and
+# ucar/unidata/idv/resources/choosers.xml.
 mcidasv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
 mcidasv.defaultselection.chooser.imageparameter.group=RTIMAGES
 
