--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -80,14 +80,17 @@ mcidasv.chooser.adde.image.servers.system = true
 # Default *ADDE chooser* server selection. Both ".server" and ".group" are
 # required. The format of the properties is like so:
 #   
-#   mcidasv.defaultselection.<CHOOSER ID>.server=...
-#   mcidasv.defaultselection.<CHOOSER ID>.group=...
+#   idv.defaultselection.<CHOOSER ID>.server=...
+#   idv.defaultselection.<CHOOSER ID>.group=...
 #   
 # <CHOOSER IDs> are taken from the "id" attribute of "chooser" elements in
 # edu/wisc/ssec/mcidasv/resources/choosers.xml and
 # ucar/unidata/idv/resources/choosers.xml.
-mcidasv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
-mcidasv.defaultselection.chooser.imageparameter.group=RTIMAGES
+idv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
+idv.defaultselection.chooser.imageparameter.group=RTIMAGES
+
+idv.defaultselection.chooser.glm.server=adde.ucar.edu
+idv.defaultselection.chooser.glm.group=RTGOESR
 
 idv.title.proplabel = "McIDAS-V"
 idv.title.propdesc = Title to use for windows, etc.
