RTGOESR rather than RTGOESS [2831]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -90,7 +90,7 @@ idv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
 idv.defaultselection.chooser.imageparameter.group=RTIMAGES
 
 idv.defaultselection.chooser.glm.server=adde.ucar.edu
-idv.defaultselection.chooser.glm.group=RTGOESS
+idv.defaultselection.chooser.glm.group=RTGOESR
 
 idv.title.proplabel = "McIDAS-V"
 idv.title.propdesc = Title to use for windows, etc.
