--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -86,8 +86,12 @@ mcidasv.chooser.adde.image.servers.system = true
 # <CHOOSER IDs> are taken from the "id" attribute of "chooser" elements in
 # edu/wisc/ssec/mcidasv/resources/choosers.xml and
 # ucar/unidata/idv/resources/choosers.xml.
+
+idv.defaultselection.chooser.image.server=adde.ucar.edu
+idv.defaultselection.chooser.image.group=RTGOESR
+
 idv.defaultselection.chooser.imageparameter.server=adde.ucar.edu
-idv.defaultselection.chooser.imageparameter.group=RTIMAGES
+idv.defaultselection.chooser.imageparameter.group=RTGOESR
 
 idv.defaultselection.chooser.glm.server=adde.ucar.edu
 idv.defaultselection.chooser.glm.group=RTGOESR
