Get L2 Radar working after THREDDS switch to HTTPS [2857]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -214,7 +214,7 @@ idv.data.adde.servers = adde.ucar.edu;stratus.al.noaa.gov;weather3.admin.niu.edu
 ##Semicolon separated list of adde servers
 idv.data.tds.radar.servers.proplabel=Catalogs
 idv.data.tds.radar.servers.propdelimiter=;
-idv.data.tds.radar.servers=http://thredds.ucar.edu/thredds/radarServer/catalog.xml
+idv.data.tds.radar.servers=https://thredds.ucar.edu/thredds/radarServer/catalog.xml
 idv.data.tds.radar.servers.merge=true
 idv.data.tds.radar.servers.merge.proplabel=Merge Catalogs
 idv.data.tds.radar.servers.delete.proplabel=Catalogs To Remove
